WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
106277
text controls are sized too small when a percentage height is set
https://bugs.webkit.org/show_bug.cgi?id=106277
Summary
text controls are sized too small when a percentage height is set
Ojan Vafai
Reported
2013-01-07 16:59:06 PST
Created
attachment 181603
[details]
test case See the test case. The current logic came from
http://trac.webkit.org/changeset/13723
, which itself copy-pasted from RenderReplaced. I tested IE9, FF17 and Opera12. WebKit is the only browser that changes the width due to a percentage height being set. Since then, this code has been copy-pasted into a few other classes as well. :) I'll post a patch tomorrow.
Attachments
test case
(339 bytes, text/html)
2013-01-07 16:59 PST
,
Ojan Vafai
no flags
Details
Patch
(10.44 KB, patch)
2013-01-08 11:11 PST
,
Ojan Vafai
tony
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ojan Vafai
Comment 1
2013-01-08 11:11:09 PST
Created
attachment 181711
[details]
Patch
Tony Chang
Comment 2
2013-01-08 11:31:29 PST
Comment on
attachment 181711
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=181711&action=review
> Source/WebCore/ChangeLog:8 > + This makes our behavior match Firefox 17, IE 9 and Opera 12.
I would include the text, "The current logic came from
http://trac.webkit.org/changeset/13723
, which itself copy-pasted from RenderReplaced."
Ojan Vafai
Comment 3
2013-01-08 11:41:59 PST
Committed
r139089
: <
http://trac.webkit.org/changeset/139089
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug